Better output dir

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Compile Python code to executable
-        run: pyinstaller --paths=$(python -c "import site; print(site.getsitepackages())") --onefile main.py -n student_test
+        run: pyinstaller --paths=$(python -c "import site; print(site.getsitepackages())") --onefile main.py -n student_test --distpath ./LocalGradescope
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -39,12 +39,12 @@ jobs:
       - name: Zip up output
         if: runner.os == 'Windows'
         run: |
-          cd dist
+          cd LocalGradescope
           Compress-Archive -Path . -DestinationPath ../LocalGradescope-${{ runner.os }}-${{ github.ref_name }}.zip
       - name: Zip up output
         if: runner.os != 'Windows'
         run: |
-          cd dist
+          cd LocalGradescope
           zip -r ../LocalGradescope-${{ runner.os }}-${{ github.ref_name }}.zip *
       - name: Release
         uses: softprops/action-gh-release@v2
